@@ -1,0 +1,74 @@
+; config options
+server:
+	hide-identity: no
+	hide-version: no
+	identity: "test-identity"
+	version: "test-version"
+CONFIG_END
+SCENARIO_BEGIN Test version.bind identity and version queries
+
+; version.bind.
+STEP 1 QUERY
+ENTRY_BEGIN
+SECTION QUESTION
+version.bind. CH TXT
+ENTRY_END
+STEP 2 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all
+REPLY QR RA
+SECTION QUESTION
+version.bind. CH TXT
+SECTION ANSWER
+version.bind. 0 CH TXT	"test-version"
+ENTRY_END
+
+; version.server.
+STEP 3 QUERY
+ENTRY_BEGIN
+SECTION QUESTION
+version.server. CH TXT
+ENTRY_END
+STEP 4 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all
+REPLY QR RA
+SECTION QUESTION
+version.server. CH TXT
+SECTION ANSWER
+version.server. 0 CH TXT	"test-version"
+ENTRY_END
+
+; hostname.bind.
+STEP 5 QUERY
+ENTRY_BEGIN
+SECTION QUESTION
+hostname.bind. CH TXT
+ENTRY_END
+STEP 6 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all
+REPLY QR RA
+SECTION QUESTION
+hostname.bind. CH TXT
+SECTION ANSWER
+hostname.bind. 0 CH TXT	"test-identity"
+ENTRY_END
+
+; id.server.
+STEP 7 QUERY
+ENTRY_BEGIN
+SECTION QUESTION
+id.server. CH TXT
+ENTRY_END
+STEP 8 CHECK_ANSWER
+ENTRY_BEGIN
+MATCH all
+REPLY QR RA
+SECTION QUESTION
+id.server. CH TXT
+SECTION ANSWER
+id.server. 0 CH TXT	"test-identity"
+ENTRY_END
+
+SCENARIO_END
